// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Flush align, one child 1`] = `
<div>
  <span
    class="_list-group _flush-right _right"
  >
    <span
      class="_list-element"
    >
      test
    </span>
  </span>
</div>
`;

exports[`Left align, one child 1`] = `
<div>
  <span
    class="_list-group _left"
  >
    <span
      class="_list-element"
    >
      test
    </span>
  </span>
</div>
`;

exports[`More complex children, onClick 1`] = `
<div>
  <span
    class="_list-group _left"
    title="title"
  >
    <span
      class="_list-element"
    >
      <h2>
        test
      </h2>
      other text
    </span>
  </span>
</div>
`;

exports[`Rigth align, one child 1`] = `
<div>
  <span
    class="_list-group _right"
  >
    <span
      class="_list-element"
    >
      test
    </span>
  </span>
</div>
`;
